# monad-challenges

./: .gitignore  monad-challenges.cabal
set1/: Main.hs
set2/: Main.hs
set3/: Main.hs
set4/: Main.hs
