name:                monad-challenges
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     MCPrelude
  -- other-modules:       
  other-extensions:    Trustworthy, CPP, NoImplicitPrelude, BangPatterns
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable set1
  default-language:                         Haskell2010
  hs-source-dirs:                           set1
  main-is:                                  Main.hs
  build-depends:                            base >= 4.7 && < 5
                                          , monad-challenges
